Can load numpy once
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>